# Ebpf-Syscall-Anomaly-Detector

./: .gitignore  README.md  detector.py  features.py  monitor.py  monitor_from_stdin.py  requirements.txt  simulate_anomaly.sh  tracer.py
.github/workflows/: ci.yml
aya-tracer/: Cargo.toml  README.md
aya-tracer/aya-tracer/: Cargo.toml  build.rs
aya-tracer/aya-tracer-common/: Cargo.toml
aya-tracer/aya-tracer-ebpf/: Cargo.toml
aya-tracer/aya-tracer-ebpf/src/: main.rs
aya-tracer/aya-tracer/src/: main.rs
tests/: test_detector.py  test_features.py
