[package]
name = "aya-tracer-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-tracer-common = { path = "../aya-tracer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-tracer"
path = "src/main.rs"
